--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "python.linting.enabled": true,
-    "python.pythonPath": "/anaconda3/bin/python"
+    "python.pythonPath": "/Users/louispopovic/miniconda3/bin/python"
 }
