--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "python.linting.enabled": true,
-    "python.pythonPath": "C:\\Users\\Louis Popovic\\Anaconda\\envs\\py37\\python.exe"
+    "python.pythonPath": "/usr/local/bin/python3"
 }
